# transmission-compose

./: .env  Cargo.toml  README.md  config.yml  default.nix
.github/workflows/: release.yml
src/: main.rs  session.rs  torrent.rs
