[package]
name = "transmission-compose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dotenvy = "0.15.7"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
transmission-rpc = "0.4.2"
