[package]
name = "transmission-compose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
futures = "0.3.30"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
url = "2.5.0"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
